# erpc

./: meson.build
erpc_c/: meson.build
erpcgen/: meson.build
